@@ -1,3 +1,10 @@
+v92
+    - small fixes
+    - small adjustments
+    - detect pdf CMYK and force as IMAGE32
+v91
+    - fix jpeg compression on larger levels
+    - fix SZDD recompression (fail if error)
 v90
     - Add DEC Alpha model/detect from paq8px193fix2
     - Small changes in mixer, statemap, apm, indirectmap, contextmap2
